[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qchem"
authors = [
    {name = "James Nelson", email = "james.nelson@ichec.ie"},
    ]
version = "0.0.1"
dependencies = [
  "numpy",
  "pyscf",
]
requires-python = ">= 3.10"

[tool.setuptools]
packages = ["qchem"]
